[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ecstasy-sdk"
version = "0.1.1"
description = "Python SDK for Ecstasy API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "ig-rudenko", email = "ig.rudenko1@yandex.ru" },
]
keywords = [
    "ecstasy",
    "sdk",
    "api",
    "httpx",
    "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
    "typing-extensions>=4.12; python_version < '3.13'",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
    "ruff>=0.8,<1",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9,<10",
]

[project.urls]
Documentation = "https://github.com/ig-rudenko/ecstasy-sdk"
Issues = "https://github.com/ig-rudenko/ecstasy-sdk/issues"
Repository = "https://github.com/ig-rudenko/ecstasy-sdk"

[tool.hatch.build.targets.wheel]
packages = ["ecstasy_sdk"]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.extend-select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-return
    "RET",
    # flake8-raise
    "RSE",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
]
lint.ignore = [
    # Line too long
    "E501",
    # Functions with a high complexity
    "C901",
    # Use ternary operator instead of `if`-`else`-block
    "SIM108",
    # Module level import not at top of file
    "E402",
    # Trailing whitespace
    "W291",
    # Blank line contains whitespace
    "W293",
]

[tool.ruff.lint.per-file-ignores]
"ecstasy_sdk/resources/*.py" = ["A003"]
"ecstasy_sdk/async_resources/*.py" = ["A003"]

[tool.black]
line-length = 110
target-version = ["py312"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]
